Fixed bug where chat messages didn't align left on Chrome

--- a/src/Components/chat-box/chat-box.styles.css
+++ b/src/Components/chat-box/chat-box.styles.css
@@ -1,8 +1,23 @@
 .chat-box {
   height: 60vh;
   overflow-y: scroll;
-  background: #cea2fd;
+  background: #d1a2fd;
   margin-top: 5rem;
+  padding: 2rem 1.7rem;
   border-radius: 14px;
-  box-shadow: black -1px 2px 5px;
+  box-shadow: black -4px 3px 6px;
+}
+
+.chat-box::-webkit-scrollbar {
+  width: 1rem;
+}
+
+.chat-box::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+.chat-box::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
