--- a/src/Components/number-input/number-input.styles.css
+++ b/src/Components/number-input/number-input.styles.css
@@ -12,6 +12,8 @@ input[type='number'].number-input {
   color: white;
   padding: 0.75rem 2rem;
   font-size: 1.8rem;
+  min-width: 20rem;
+  outline: none;
 }
 
 input[type='number']::placeholder {
